--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: whmcsadmin
+name: SmarterX
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -41,6 +41,7 @@ dependencies:
   crypto: ^3.0.2
   flutter_app_lock: ^2.0.0
   sqflite: ^2.0.3+1
+  confirm_dialog: ^1.0.1
 
 dev_dependencies:
   flutter_test:
